Fixing align bugs
 - fixing align bugs

Related work items: #1640

--- a/client/app/site/partneraccounts/login/login.less
+++ b/client/app/site/partneraccounts/login/login.less
@@ -1,6 +1,6 @@
 .al-theme{
 	.partner-login-container{
-		margin-top: 30px;
+		margin-top: 50px;
 		text-align: center;
 		&>h3{
 			font-family: BrandonRegular;
@@ -15,6 +15,17 @@
 				margin-top: 10px;
 			}
 		}
+		.alert{
+	      margin: 0 auto 22px;
+	      display: block;
+	      text-align: center;
+	      background: none;
+	      color: #d73030;
+	      border: 0;
+	      font-size: 20px;
+	      padding: 0;
+	      font-family: BrandonRegular;
+	    }
 		.fixed-logo{
 			height: 140px;
 			width: 140px;
@@ -43,8 +54,12 @@
 				font-weight: bold;
 			}
 		}
-		.custom_form{
+		.login-form{
+			margin-bottom: 60px;
 			.inputminimal{
+				margin-left: auto;
+				margin-right: auto;
+
 				background: #f7f7f7;
 			}
 		}
